--- a/index.html
+++ b/index.html
@@ -10,63 +10,44 @@
   <title>RMCCA Intranet Website</title>
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-  <link href="https://fonts.googleapis.com/css?family=Alegreya:700|Caveat:400,700|Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Alegreya:700|Caveat|Roboto:300,400&display=swap" rel="stylesheet">
   <style>
-    .link {
-      position: relative;
-      transition: padding .09s ease-in;
-    }
-    .link::before {
+    .link a::before {
       content: '';
       display: block;
+      width: 10px;
+      height: 1.5px;
+      background: #cbd5e0;
       position: absolute;
-      top: .6em;
-      left: 0px;
-      height: 4px;
-      width: 0;
-      background-color: #feb2b2;
-      transition: width .09s ease-in;
-      transition-delay: .1s;
-      border-radius: 2px;
+      top: calc(50% - 1.5px);
+      left: 0;
     }
-    .link:hover,
-    .link:focus {
-      padding-left: 30px;
-      outline: none;
-    }
-    .link:hover::before, 
-    .link:focus::before {
-      width: 18px;
+    link a:hover::before {
+      background: white;
     }
   </style>
 </head>
-<body class="bg-teal-100">
+<body class="text-gray-700 bg-blue-900 select-none" style="font-family: 'Roboto', sans-serif;">
   <div id="app">
-    <div>
-      <div class="w-full sm:w-1/2 py-32 sm:py-0 sm:h-screen bg-blue-900 static sm:fixed font-bold text-2xl flex justify-center align-center" style="font-family: 'Alegreya', serif;
-      ">
-        <div class="flex flex-col">
-          <h1 class="text-teal-300 block mx-auto my-auto leading-none ">
-              <span class="text-6xl m-0 inline-block tracking-tighter" style="text-shadow: .08em .03em white;">RMCCA</span><br><span class="text-5xl text-red-300" style="font-family: 'Caveat', cursive; text-shadow: .06em .05em white;">Intranet Website</span>
-            </h1>
-            <!-- slider -->
-            <!-- slider ends -->
-        </div>
+    <header class="bg-teal-200" style="border-bottom: 1px solid #4a5568">
+      <div class="container mx-auto p-4 flex justify-center align-center">
+        <h1 class="text-xl inline-block px-4 py-1 border border-solid border-gray-700 rounded-lg"><span class="tracking-tighter leading-none" style="font-family: 'Alegreya', serif;">RMMCA</span> <span style="font-family: 'Caveat', cursive;">Intranet</span></h1>
       </div>
-      <div class="w-1/2  sm:absolute sm:top-0 sm:right-0 pt-20 pl-16 text-xl text-gray-700" style="font-family: 'Alegreya', serif;">
-        <div v-for="category in categories">
-          <h3 style="font-family: 'Caveat', cursive;
-          " class="text-5xl text-bold text-blue-300">{{ category.title }}</h3>
-          <ul class="mb-12">
-            <li v-for="link in category.links" class="mb-3">
-              <a href="#" class="link">{{ link }}</a>
-            </li>
-            <li> ... </li>
+      <section id="slider"></section>
+    </header>
+    <main class="container mx-auto px-4 text-gray-400 py-16">
+      <section id="links" class="flex flex-col items-center sm:justify-between md:flex-row md:justify-around">
+        <div v-for="category in categories" class="py-4 border border-solid border-gray-400 my-8 py-8 px-6 rounded-lg w-64 sm:w-1/2 md:w-1/4">
+          <h2 style="font-family: 'Alegreya', serif;" class="text-xl mb-3 text-red-300">{{ category.title }}</h2>
+          <ul>
+            <li v-for="link in category.links" class="link"><a href="#" class="inline-block p-2 w-full pl-6 hover:text-gray-100 hover:underline relative">{{ link }}</a></li>
           </ul>
         </div>
-        <p class="mb-6 text-sm">Made with <span class="text-red-500">❤</span>, by <a href="https://zmardil.github.io" class="underline hover:text-red-500">zmardil</a>.</p>
-      </div>
-    </div>    
+      </section>
+    </main>
+    <footer class="py-6 container mx-auto px-4 text-center" style="margin-top: 1px solid black">
+      <p class="text-gray-500 p-1 border border-solid border-gray-500 px-2 inline-block text-xs rounded-sm">Made with <span class="text-red-600">❤</span>, by <a href="https://zmardil.github.io" class="underline">zmardil</a></p>
+    </footer>
   </div>
   <script src="app.js"></script>
 </body>
